    2. Cookies containing '=' or wrapped in quotes are now recognized
    3. The JavaDoc now correctly shows the public methods in TableCell used for handling nested tables.
    4. The XML retrieval test is no longer run when Xerces is not in the classpath, rather than giving an error.
    5. File upload capability no longer depends on JavaMail and JAF, although its test does

Additions:
    1. The Referer header is now sent for requests derived from links and forms.

08-Jan-01 1.2.2
Acknowledgements:
    Thanks to Rocky Rhodes for finding the multiple cookie bug
    Thanks to Scott Croco for correcting the response code problem
    Thanks to Ken MacLeod for finding the UTF-8 bug.

Additions:
    1. Initial implementation of file upload capability
    
Problems corrected:
    1. Multiple cookies were not being sent correctly
    2. When a response was received with a bad response code, it was treated either as a RuntimeException
       or a file not found exception.
    3. Creating a request from a form with an empty <select> tag was generating a SingleValuedParameterException.
    4. Corrected IllegalArgumentException: sun.io.CharToByteUTF-8 that happened in JDK 1.1.x
    
01-Jan-01 1.2.1
Acknowledgements:
    Thanks to Toyoshi Ushio for helping with the handling of non-English scripts and for translating the home page and cookbook into Japanese.
    
Problems corrected:
    1. Content-type charset attribute is now recognized, allowing for the proper handling of non-ascii html pages.
    2. Form submissions now use the page character set encoding.
    3. Old format cookie headers (with the expires=attribute) are now recognized.
    
Additions:
    1. Introductory ServletUnit functionality (parameters and sessions, but no JSP, no forwarding)
    2. Added getTableWithID method to WebResponse, ParsedHTML
    3. Added HttpUnitOptions.setDefaultCharacterSet to handle missing content charset headers, so as not to assume default encoding (iso-8859-1).